added revenue simulator
